# soundsright-subnet

./: .gitignore  .miner-env.sample  .validator-env.sample  CNAME  Gemfile  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES  _config.yml  docker-compose.yml  index.md  miner.Dockerfile  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: subnet-containers-latest.yml  subnet-containers-tagged.yml
_includes/: embed-audio.html
docs/mining/: generate_data.md  model_formatting.md  running_miner.md
docs/subnet/: citations.md  competitions.md  roadmap.md  subnet_architecture.md
docs/validating/: running_validator.md  validator_architecture.md
mining/: generate_data.md  index.md  model_formatting.md  running_miner.md  upcoming_changes.md
scripts/: generate_dataset.py  run_validator.sh  verify_miner_model.py
soundsright/base/: __init__.py  neuron.py  protocol.py
soundsright/base/benchmarking/: __init__.py  metrics.py  remote_logging.py  scoring.py
soundsright/base/data/: __init__.py  download.py  generate.py  sentences.py  tts.py
soundsright/base/models/: __init__.py  build.py  evaluate.py  (+3 more)
soundsright/core/: __init__.py
soundsright/neurons/: miner.py  validator.py
subnet/: citations.md  competitions.md  index.md  roadmap.md  subnet_architecture.md
test/benchmarking/: scoring_test.py  test_filters.py  test_remote_logging.py
test/bittensor/: plot_weight_mutation.py  test_commit_reveal.py
test/data/: data_gen_loop.py  test_random_sentence.py
test/models/: async_image_build.py  async_model_run.py  metadata_handler_test.py  repo_verififcation_test.py  test_cache_filtering.py  validation_test.py
test/utils/: test_container.py  test_dockerfile_validation.py  upload_audio.py
validating/: index.md  running_validator.md  validator_architecture.md
(+16 files in other folders)
